# ecc-session-store

./: .gitignore  Cargo.toml  LICENSE
.agents/skills/ecc-session-store/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: ecc-session-store-instincts.yaml
.claude/skills/ecc-session-store/: SKILL.md
.codex/: AGENTS.md
src/: main.rs
src/session/migrations/: 0001_initial.up.sql
