[package]
name = "ecc-session-store"
version = "0.1.0"
edition = "2021"
authors = ["devops2626 <your.email@example.com>"]
description = "Production-grade SQLite session store for ECC 2.0"
repository = "https://github.com/devops2626/ecc-session-store"
license = "MIT"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
